docs/_static/styles/extra.css
/* ... */
.download-button .title,
.download-button .subtitle {
  white-space: nowrap;
  line-height: 1.2;
}
.download-button .title {
  font-weight: 750;
  font-size: 14.5pt;
}
.download-button .subtitle {
  font-weight: 500;
  font-size: 11.5pt;
}
.download-button .subtitle .small {
  font-size: 9pt;
}
.download-button .icon {
  width: 2.5em;
  height: 2.5em;
  flex-shrink: 0;
  margin-left: auto;
}
.download-button .icon img,
.download-button .icon svg {
  width: 100%;
  height: 100%;
  display: block;
  opacity: 0.85;
}
.download-button {
  background-color: #eff3fe;
  color: black;
  transition: border 0.2s ease, background 0.2s ease;
}
.no-animation .download-button {
  transition: none !important;
}
[data-md-color-scheme="default"] .download-button {
  border: 2px solid #bacff8;
}
[data-md-color-scheme="default"] .download-button:hover {
  background-color: #f4f6fc;
  border-color: #9fb1d2;
}
[data-md-color-scheme="slate"] .download-button {
  border: 2px solid #eff3fe;
}
[data-md-color-scheme="slate"] .download-button:hover {
  background-color: white;
  border-color: #6c6f78;
}
@media screen and (max-width: 27.5em) {
  .download-button .text {
    flex-direction: row;
    align-items: baseline;
    gap: 0.5em;
  }
  .download-button .subtitle .small {
    font-size: 11pt;
  }
  .download-button-container {
    width: 100%;
    max-width: 20em;
  }
  .download-button {
    width: 100%;
    padding: 0.4em 1em;
    border-radius: 4pt;
  }
  .download-button .icon {
    width: 2em;
    height: 2em;
  }
}

/* [Zensical] Remove the margin for tabbed content on mobile. */
@media screen and (max-width: 44.9844em) {
  .md-content__inner > .tabbed-set .tabbed-labels {
    margin: 0;
    max-width: 100vw;
    scroll-padding-inline-start: 0;
  }
}

/* [Zensical] Fix path caret not being very visible. */
[data-md-color-scheme="slate"] .md-path__item:not(:first-child)::before {
  background-color: hsla(var(--md-hue), 15%, 90%, 0.70);
}
[data-md-color-scheme="default"] .md-path__item:not(:first-child)::before {
  background-color: #000000aa;
}

/* Tray screenshot styling. */
[data-md-color-scheme="slate"] .tray-screenshot {
  background-color: #333;
}
[data-md-color-scheme="default"] .tray-screenshot {
  background-color: #eee;
}
.tray-screenshot {
  border-radius: 1.25em;
  padding: .5em;
}

/* Download heading styling. */
.download-heading {
  display: flex;
  align-items: center;
  gap: .5rem;
  flex-wrap: wrap;
}
.download-heading span {
  margin-right: .25em;
}
.download-heading a {
  display: block;
}
.download-heading img {
  display: block;
  height: .9em;
}
.download-links {
  display: inline-flex;
  gap: 0.5rem;
  align-items: center;
}
@media (max-width: 27.5em) {
  .download-heading {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 0.5rem;
    margin-bottom: 0.75em !important;
  }
  .download-links {
    display: flex;
    gap: 0.5rem;
  }
}

/* Styling classes for theme-dependent elements. */
[data-md-color-scheme="slate"] .light-only {
  display: none !important;
}
[data-md-color-scheme="default"] .dark-only {
  display: none !important;
}

/* [Zensical] Do not allow the browser to show the pointless link URL. Also do
not allow the user to select the text.*/
.tabbed-set .tabbed-labels label a {
  pointer-events: none;
  user-select: none;
}

/* [Zensical] Slightly increase the font size for admonitions. */
.md-typeset .admonition {
  font-size: .88em;
}

.anchor-target {
  position: absolute;
  height: 0 !important;
  margin: 0 !important;
  padding: 0 !important;
  overflow: hidden;
  transform: translateY(calc(1.6em - 0.64em));
}

[data-md-color-scheme="slate"] details .tabbed-set {
  border: 1px solid #333;
}
[data-md-color-scheme="default"] details .tabbed-set {
  border: 1px solid #ccc;
}

[data-md-color-scheme="slate"] details summary::after {
  color: white !important;
}
[data-md-color-scheme="default"] details summary::after {
  color: black !important;
}

[data-md-color-scheme="default"] details {
  outline: 1px solid #00000022;
}

/* [Zensical] Change the "info" admonition color to the same color as "note". */
.admonition.info, details.info {
  background-color: #448aff1a !important;
}
.admonition.info .admonition-title::before {
  background-color: #448aff !important;
}
details.info summary::before {
  background-color: #448aff !important;
}

/* [Zensical] Give tables a slightly larger top and bottom margin. */
.tabbed-set {
  margin-top: 1.5em !important;
  margin-bottom: 1.5em !important;
}

